Overflow hidden bug
ATM .page-container (eigenlijk #page-container) om te debuggen.

--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -34,20 +34,22 @@ body {
     background-size: 10vw;
 }
 
-.page-container {
+#page-container {
     position: relative;
-    height: 100%;
-    width: 100%;
-    // overflow: hidden;
+    height:100%;
+    width:100%;
+    overflow:hidden;
 }
 
 section {
-    display: block;
-    position: absolute;
-    top: 0px;
-    margin-top: 0;
-    width: 100%;
-    height: 100%;
+    display:block;
+    position:absolute;
+    top:0px;
+    margin-top:0px;
+    width:100%;
+    height:100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 //sections
