--- a/app/_scss/_section.scss
+++ b/app/_scss/_section.scss
@@ -1,7 +1,8 @@
 .section-wrapper {
 	position: absolute;
-	width: 100%;
-	height: 95vh;
+	width:100%;
+	height:auto;
+	min-height:100%;
 	
 	.sectionHeader{
 		display: flex;
